sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:18: error: type mismatch;
 found   : Unit
 required: Boolean
    if(fin = true){
           ^